--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~51.0.24",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-video": "^6.4.3",
+    "react-router": "^6.25.1",
+    "react-router-native": "^6.25.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
